# chatbot_pdf_oasis

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  conftest.py  oasis_form_v2.py  pyproject.toml  spec.md
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: analise_estado_atual.md  database_erd.md  doc_pdf_editavel.html  doc_pdf_editavel.md
docs/adr/: ADR-001-monolito-modular.md  ADR-002-fastapi-celery.md  ADR-003-postgres-redis.md  ADR-004-pymupdf-license.md  ADR-005-s3-storage.md  ADR-006-api-versioning.md  ADR-007-voronoi-zones.md  ADR-008-mypy-config.md  ADR-009-pre-commit.md  ADR-010-multi-format-catalog-support.md  ADR-011-analyzer-warnings.md  README.md
docs/backup/: oasis_romaneio.py
docs/sprint_01/: PRD_sprint_01.md  PROMPTS_FASEADOS_sprint_01.md
docs/sprint_02/: PRD_sprint_02.md  PROMPTS_FASEADOS_sprint_02.md
docs/sprint_03/: PRD_sprint_03.md
docs/sprint_04/: PRD_sprint_04.md
docs/sprint_05/: PRD_sprint_05.md
docs/sprint_06/: PRD_sprint_06.md
docs/sprint_07/: PRD_sprint_07.md
docs/sprint_08/: PRD_sprint_08.md
migrations/: README  env.py
migrations/versions/: 0001_auth_tables.py  0002_catalog_tables.py  0003_orders_schema.py  0004_web_auth_tables.py  0005_erp_integration.py  0006_soft_delete.py  0007_add_started_at_to_jobs.py  0008_add_catalogs_warnings.py  0009_add_brand_format_profile.py
scripts/: generate_oasis_golden.py
src/catalogflow/: __init__.py  main.py
src/catalogflow/infra/: __init__.py  cache.py  celery_app.py  database.py  settings.py  storage.py
src/catalogflow/modules/: __init__.py
src/catalogflow/modules/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
src/catalogflow/modules/auth/tests/: __init__.py  conftest.py  test_dependencies.py  test_service.py
src/catalogflow/modules/catalog/: __init__.py  dependencies.py  domain.py  field_injector.py  models.py  pdf_analyzer.py  router.py  schemas.py  service.py  tasks.py
src/catalogflow/modules/catalog/format_profiles/: __init__.py  ferla_like.json  hyphenated_single_price.json  oasis_default.json  prefixed_dual_price.json  schema.json
src/catalogflow/modules/catalog/strategies/: __init__.py  base.py
src/catalogflow/modules/catalog/strategies/grade/: __init__.py  alpha_range.py
src/catalogflow/modules/catalog/strategies/name/: __init__.py  category_vocabulary.py  positional_title.py
src/catalogflow/modules/catalog/strategies/price/: __init__.py  br_currency.py  labeled_dual.py
src/catalogflow/modules/catalog/strategies/sku/: __init__.py  regex_hyphenated.py  regex_prefixed.py
src/catalogflow/modules/catalog/strategies/swatches/: __init__.py  geometric_bottom.py
src/catalogflow/modules/catalog/tests/: __init__.py  conftest.py  test_domain.py  test_ferla_integration.py  test_field_injector.py  test_format_profiles.py  test_migration_0008.py  test_migration_0009.py  test_pdf_analyzer.py  test_pdf_analyzer_regression.py  test_prefixed_format_integration.py  test_router.py  test_schemas.py  test_service.py  test_tasks.py  test_warnings_emission.py
src/catalogflow/modules/catalog/tests/strategies/: test_alpha_range_grade.py  test_base.py  test_br_currency_price.py  test_category_vocabulary_name.py  test_dataclasses.py  test_geometric_bottom_swatches.py  test_labeled_dual_price.py  test_positional_title_name.py  (+3 more)
src/catalogflow/modules/orders/: __init__.py  dependencies.py  extractor.py  models.py  normalizer.py  router.py  schemas.py  service.py  tasks.py
src/catalogflow/modules/orders/tests/: __init__.py  conftest.py  test_extractor.py  test_normalizer.py  test_router.py  test_service.py  test_tasks.py
src/catalogflow/modules/reservation/: __init__.py
src/catalogflow/modules/reservation/tests/: __init__.py
src/catalogflow/modules/romaneio/: __init__.py  builder.py  models.py  router.py  service.py  tasks.py
src/catalogflow/modules/romaneio/tests/: __init__.py  conftest.py  test_builder.py  test_service.py  test_tasks.py
src/catalogflow/modules/stock/: __init__.py  adapter.py  consistem_adapter.py  dependencies.py  mock_adapter.py  models.py  router.py  schemas.py  service.py  tasks.py
src/catalogflow/modules/stock/adapters/: __init__.py
src/catalogflow/modules/stock/tests/: __init__.py  conftest.py  test_consistem_adapter.py  test_mock_adapter.py  test_router.py  test_service.py  test_tasks.py
src/catalogflow/scripts/: __init__.py  run_api.py  run_worker.py  seed_dev.py
src/catalogflow/shared/: __init__.py  errors.py  image_fetcher.py  jobs_router.py  middleware.py  responses.py
src/catalogflow/shared/tests/: test_image_fetcher.py
src/catalogflow/shared/utils/: __init__.py
src/catalogflow/static/css/: app.css
src/catalogflow/static/js/: app.js
src/catalogflow/templates/: base.html  dashboard.html  forgot.html  login.html  register.html
src/catalogflow/templates/admin/: users.html
src/catalogflow/templates/catalogs/: _actions_strip.html  _badge.html  _upload_progress.html  detail.html  list.html  upload.html
src/catalogflow/templates/errors/: 404.html  500.html  magic_link.html
src/catalogflow/templates/orders/: _badge.html  _romaneio_action.html  _stock_action.html  _submit_action.html  _upload_progress.html  detail.html  list.html  upload.html
src/catalogflow/web/: __init__.py  _helpers.py  auth.py  data.py  email_service.py  product_image.py  router.py  user_service.py
src/catalogflow/web/tests/: conftest.py  test_auth_module.py  test_data.py  test_email_service.py  test_helpers.py  test_router.py  test_user_service.py  test_web_auth.py  test_web_pages.py
tests/: __init__.py  conftest.py  fakes.py
tests/e2e/: __init__.py  conftest.py  test_api_flows.py
tests/fixtures/: __init__.py  catalog_metadata_oasis_golden.json  generate_ferla_fixtures.py  generate_fixtures.py  generate_order_fixtures.py  generate_prefixed_catalog_fixtures.py
tests/integration/: __init__.py  conftest.py  test_app.py  test_catalog_pipeline.py  test_order_pipeline.py  test_real_catalogs.py
